--- a/app/src/main/res/layout/fragment_summary_archive.xml
+++ b/app/src/main/res/layout/fragment_summary_archive.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
-	xmlns:android = "http://schemas.android.com/apk/res/android">
+	xmlns:android = "http://schemas.android.com/apk/res/android"
+	xmlns:app = "http://schemas.android.com/apk/res-auto"
+	>
 
 	<data>
 
@@ -12,9 +14,19 @@
 		<import type = "android.view.View"/>
 	</data>
 
-	<RelativeLayout
+	<androidx.constraintlayout.widget.ConstraintLayout
 		android:layout_width = "match_parent"
 		android:layout_height = "match_parent"
-		android:background = "@android:color/holo_blue_bright"
-		/>
+		>
+
+		<TextView
+			android:layout_width = "wrap_content"
+			android:layout_height = "wrap_content"
+			app:layout_constraintTop_toTopOf = "parent"
+			app:layout_constraintStart_toStartOf = "parent"
+			app:layout_constraintEnd_toEndOf = "parent"
+			android:layout_marginTop = "325dp"
+			android:text = "SUMMARY ARCHIVE"
+			/>
+	</androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
