--- a/app/src/main/res/layout/c_authorization_mail.xml
+++ b/app/src/main/res/layout/c_authorization_mail.xml
@@ -29,7 +29,6 @@
 			app:layout_constraintEnd_toEndOf = "parent"
 			android:layout_margin = "16dp"
 			android:background = "@drawable/shape_card"
-			android:contentDescription = "TODO"
 			/>
 
 		<include
@@ -51,7 +50,8 @@
 			app:layout_constraintStart_toStartOf = "@+id/iv_background"
 			app:layout_constraintEnd_toEndOf = "@id/iv_background"
 			android:layout_marginTop = "16dp"
-			android:layout_marginHorizontal = "16dp"
+			android:layout_marginStart="16dp"
+			android:layout_marginEnd="16dp"
 			style = "@style/text_color_and_size"
 			android:inputType = "textEmailAddress"
 			android:hint = "@string/mail_1"
