--- a/app/src/main/res/layout/c_authorization_mail.xml
+++ b/app/src/main/res/layout/c_authorization_mail.xml
@@ -80,6 +80,7 @@
 			android:layout_marginTop = "16dp"
 			android:background = "@drawable/shape_button"
 			android:text = "@string/enter"
+			android:onClick = "@{() -> viewmodel.onAuthMailEnterClick()}"
 			/>
 	</androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
