--- a/app/src/main/res/layout/c_social_network.xml
+++ b/app/src/main/res/layout/c_social_network.xml
@@ -26,6 +26,21 @@
 
 		<ImageButton
 			android:id = "@+id/btn_user"
+			android:visibility = "@{viewmodelauth.isBtnUserVisible() ? View.GONE : View.VISIBLE}"
+			android:layout_width = "48dp"
+			android:layout_height = "48dp"
+			app:layout_constraintTop_toTopOf = "@+id/bnt_ok"
+			app:layout_constraintBottom_toBottomOf = "@+id/bnt_ok"
+			app:layout_constraintEnd_toStartOf = "@+id/btn_phone"
+			android:layout_marginEnd = "12dp"
+			app:srcCompat = "@drawable/ic_user"
+			android:background = "@drawable/shape_badge"
+			android:onClick = '@{() -> viewmodel.setFragmentLaunch("AuthUser")}'
+			/>
+
+		<ImageButton
+			android:id = "@+id/btn_user_on"
+			android:visibility = "@{viewmodelauth.isBtnUserActiveVisible() ? View.VISIBLE : View.GONE}"
 			android:layout_width = "48dp"
 			android:layout_height = "48dp"
 			app:layout_constraintTop_toTopOf = "@+id/bnt_ok"
@@ -35,7 +50,6 @@
 			app:srcCompat = "@drawable/ic_user"
 			android:background = "@drawable/shape_button"
 			android:onLongClick = "@{() -> viewmodelauth.onAuthUserLongClick()}"
-			android:onClick = '@{() -> viewmodel.setFragmentLaunch("AuthUser")}'
 			/>
 
 		<ImageButton
@@ -47,7 +61,7 @@
 			app:layout_constraintEnd_toStartOf = "@+id/btn_vk"
 			android:layout_marginEnd = "12dp"
 			app:srcCompat = "@drawable/ic_phone"
-			android:background = "@drawable/shape_button"
+			android:background = "@drawable/shape_badge"
 			/>
 
 		<ImageButton
@@ -59,7 +73,7 @@
 			app:layout_constraintEnd_toStartOf = "@+id/bnt_ok"
 			android:layout_marginEnd = "12dp"
 			app:srcCompat = "@drawable/ic_vk"
-			android:background = "@drawable/shape_button"
+			android:background = "@drawable/shape_badge"
 			/>
 
 		<ImageButton
@@ -70,7 +84,7 @@
 			app:layout_constraintStart_toStartOf = "@+id/btn_mail_ru"
 			app:layout_constraintEnd_toEndOf = "@+id/btn_discord"
 			app:srcCompat = "@drawable/ic_ok"
-			android:background = "@drawable/shape_button"
+			android:background = "@drawable/shape_badge"
 			/>
 
 		<ImageButton
@@ -82,7 +96,7 @@
 			app:layout_constraintStart_toEndOf = "@+id/bnt_ok"
 			android:layout_marginStart = "12dp"
 			app:srcCompat = "@drawable/ic_instagram"
-			android:background = "@drawable/shape_button"
+			android:background = "@drawable/shape_badge"
 			/>
 
 		<ImageButton
@@ -94,7 +108,7 @@
 			app:layout_constraintStart_toEndOf = "@+id/btn_instagram"
 			android:layout_marginStart = "12dp"
 			app:srcCompat = "@drawable/ic_telegram"
-			android:background = "@drawable/shape_button"
+			android:background = "@drawable/shape_badge"
 			/>
 
 		<ImageButton
@@ -106,7 +120,7 @@
 			app:layout_constraintEnd_toStartOf = "@+id/btn_facebook"
 			android:layout_marginEnd = "12dp"
 			app:srcCompat = "@drawable/ic_gmail"
-			android:background = "@drawable/shape_button"
+			android:background = "@drawable/shape_badge"
 			/>
 
 		<ImageButton
@@ -118,7 +132,7 @@
 			app:layout_constraintEnd_toStartOf = "@+id/btn_mail_ru"
 			android:layout_marginEnd = "12dp"
 			app:srcCompat = "@drawable/ic_facebook"
-			android:background = "@drawable/shape_button"
+			android:background = "@drawable/shape_badge"
 			/>
 
 		<ImageButton
@@ -132,7 +146,7 @@
 			android:layout_marginStart = "16dp"
 			android:layout_marginEnd = "16dp"
 			app:srcCompat = "@drawable/ic_mail_ru"
-			android:background = "@drawable/shape_button"
+			android:background = "@drawable/shape_badge"
 			/>
 
 		<ImageButton
@@ -144,7 +158,7 @@
 			app:layout_constraintStart_toEndOf = "@+id/btn_mail_ru"
 			android:layout_marginStart = "12dp"
 			app:srcCompat = "@drawable/ic_discord"
-			android:background = "@drawable/shape_button"
+			android:background = "@drawable/shape_badge"
 			/>
 
 		<ImageButton
@@ -156,7 +170,7 @@
 			app:layout_constraintStart_toEndOf = "@+id/btn_discord"
 			android:layout_marginStart = "12dp"
 			app:srcCompat = "@drawable/ic_microsoft"
-			android:background = "@drawable/shape_button"
+			android:background = "@drawable/shape_badge"
 			/>
 	</androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
