--- a/app/src/main/res/layout/c_intro_05.xml
+++ b/app/src/main/res/layout/c_intro_05.xml
@@ -1,31 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout
+	xmlns:android = "http://schemas.android.com/apk/res/android"
+	xmlns:app = "http://schemas.android.com/apk/res-auto"
+	>
 
 	<data>
+
 		<variable
 			name = "viewmodel"
-			type = "ru.jobni.jobni.viewmodel.MainViewModel" />
+			type = "ru.jobni.jobni.viewmodel.MainViewModel"
+			/>
 	</data>
 
 	<androidx.constraintlayout.widget.ConstraintLayout
-		xmlns:android = "http://schemas.android.com/apk/res/android"
-		xmlns:app = "http://schemas.android.com/apk/res-auto"
 		android:layout_width = "match_parent"
 		android:layout_height = "match_parent"
 		android:orientation = "vertical"
-		xmlns:bind="http://schemas.android.com/apk/res-auto"
 		>
 
 		<TextView
 			android:id = "@+id/activity_intro_5_1"
-			android:layout_width = "273dp"
+			android:layout_width = "345dp"
 			android:layout_height = "wrap_content"
 			app:layout_constraintTop_toTopOf = "parent"
 			app:layout_constraintBottom_toBottomOf = "parent"
 			app:layout_constraintStart_toStartOf = "parent"
 			android:layout_marginTop = "16dp"
 			android:layout_marginBottom = "16dp"
-			android:layout_marginStart = "48dp"
+			android:layout_marginStart = "50dp"
 			android:textStyle = "bold"
 			android:textColor = "@color/font_color"
 			android:textSize = "18sp"
@@ -39,10 +41,10 @@
 			android:layout_height = "wrap_content"
 			app:layout_constraintTop_toTopOf = "parent"
 			app:layout_constraintBottom_toBottomOf = "parent"
-			app:layout_constraintEnd_toEndOf = "parent"
+			app:layout_constraintStart_toStartOf = "parent"
 			android:layout_marginTop = "16dp"
 			android:layout_marginBottom = "16dp"
-			android:layout_marginEnd = "36dp"
+			android:layout_marginStart = "50dp"
 			android:textStyle = "bold"
 			android:textColor = "@color/font_color"
 			android:textSize = "18sp"
@@ -60,7 +62,7 @@
 			android:layout_marginEnd = "16dp"
 			android:background = "@drawable/shape_button"
 			android:text = "@string/ready"
-			android:onClick='@{() -> viewmodel.onClickBtnStart("Welcome")}'
+			android:onClick = '@{() -> viewmodel.onClickBtnStart("Welcome")}'
 			/>
 	</androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
