--- a/app/src/main/res/layout/fragment_intro.xml
+++ b/app/src/main/res/layout/fragment_intro.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android = "http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+	xmlns:android = "http://schemas.android.com/apk/res/android"
 	xmlns:app = "http://schemas.android.com/apk/res-auto"
 	android:layout_width = "match_parent"
-	android:layout_height = "match_parent">
-	<androidx.viewpager.widget.ViewPager android:id = "@+id/pager"
+	android:layout_height = "match_parent"
+	>
+
+	<androidx.viewpager.widget.ViewPager
+		android:id = "@+id/pager"
 		android:layout_width = "0dp"
 		android:layout_height = "0dp"
 		app:layout_constraintTop_toTopOf = "parent"
@@ -13,8 +17,11 @@
 		android:layout_marginTop = "8dp"
 		android:layout_marginBottom = "8dp"
 		android:layout_marginStart = "8dp"
-		android:layout_marginEnd = "8dp"></androidx.viewpager.widget.ViewPager>
-	<com.google.android.material.tabs.TabLayout android:id = "@+id/tabDots"
+		android:layout_marginEnd = "8dp"
+		/>
+
+	<com.google.android.material.tabs.TabLayout
+		android:id = "@+id/tabDots"
 		android:layout_width = "0dp"
 		android:layout_height = "wrap_content"
 		app:layout_constraintBottom_toBottomOf = "parent"
@@ -26,5 +33,6 @@
 		android:layout_alignParentBottom = "true"
 		app:tabBackground = "@drawable/selector_tab"
 		app:tabGravity = "center"
-		app:tabIndicatorHeight = "0dp"/>
+		app:tabIndicatorHeight = "0dp"
+		/>
 </androidx.constraintlayout.widget.ConstraintLayout>
