--- a/app/src/main/res/layout/c_menu_bottom.xml
+++ b/app/src/main/res/layout/c_menu_bottom.xml
@@ -1,32 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
-    <data>
-        <variable
-                name = "viewmodel"
-                type = "ru.jobni.jobni.viewmodel.MainViewModel"
-        />
-    </data>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:context=".MainActivity">
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/menu_bottom"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:background="@color/theme_1_color_1"
-            app:menu="@menu/bottom"
-            app:itemIconTint="@drawable/selector_menu"
-            app:itemTextColor="@drawable/selector_menu"
-            app:labelVisibilityMode="labeled"
-            android:visibility="gone"
+<layout
+	xmlns:android = "http://schemas.android.com/apk/res/android"
+	xmlns:app = "http://schemas.android.com/apk/res-auto"
+	>
 
-            />
-</androidx.constraintlayout.widget.ConstraintLayout>
+	<data>
+
+		<variable
+			name = "viewmodel"
+			type = "ru.jobni.jobni.viewmodel.MainViewModel"
+			/>
+	</data>
+
+	<androidx.constraintlayout.widget.ConstraintLayout
+		android:layout_width = "match_parent"
+		android:layout_height = "wrap_content"
+		>
+
+		<com.google.android.material.bottomnavigation.BottomNavigationView
+			android:id = "@+id/menu_bottom"
+			android:visibility = "gone"
+			android:layout_width = "0dp"
+			android:layout_height = "wrap_content"
+			app:layout_constraintBottom_toBottomOf = "parent"
+			app:layout_constraintStart_toStartOf = "parent"
+			app:layout_constraintEnd_toEndOf = "parent"
+			android:background = "@color/theme_1_color_1"
+			app:menu = "@menu/bottom"
+			app:itemIconTint = "@drawable/selector_menu"
+			app:itemTextColor = "@drawable/selector_menu"
+			app:labelVisibilityMode = "labeled"
+			/>
+	</androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
