--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -1,35 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout
+	xmlns:android = "http://schemas.android.com/apk/res/android"
+	xmlns:app = "http://schemas.android.com/apk/res-auto"
+	>
 
-    <data>
-        <variable name="viewmodel" type="ru.jobni.jobni.viewmodel.MainViewModel"/>
-    </data>
-<androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    <include
-            layout="@layout/c_menu_top"
-            app:viewmodel="@{viewmodel}"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:id="@+id/welcome_toolbar"/>
+	<data>
 
-    <include
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            layout="@layout/c_search"
-            app:viewmodel="@{viewmodel}"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+		<variable
+			name = "viewmodel"
+			type = "ru.jobni.jobni.viewmodel.MainViewModel"
+			/>
+	</data>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+	<androidx.constraintlayout.widget.ConstraintLayout
+		android:layout_width = "match_parent"
+		android:layout_height = "match_parent"
+		>
+
+		<include
+			android:id = "@+id/welcome_toolbar"
+			layout = "@layout/c_menu_top"
+			android:layout_width = "match_parent"
+			android:layout_height = "0dp"
+			app:layout_constraintTop_toTopOf = "parent"
+			app:layout_constraintStart_toStartOf = "parent"
+			app:layout_constraintEnd_toEndOf = "parent"
+			app:viewmodel = "@{viewmodel}"
+			/>
+
+		<include
+			layout = "@layout/c_search"
+			android:layout_width = "match_parent"
+			android:layout_height = "wrap_content"
+			app:layout_constraintTop_toTopOf = "parent"
+			app:layout_constraintBottom_toBottomOf = "parent"
+			app:layout_constraintStart_toStartOf = "parent"
+			app:layout_constraintEnd_toEndOf = "parent"
+			android:layout_margin="16dp"
+			app:viewmodel = "@{viewmodel}"
+			/>
+	</androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
 
 
