--- a/app/src/main/res/layout/e_splash_screen.xml
+++ b/app/src/main/res/layout/e_splash_screen.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android = "http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+	xmlns:android = "http://schemas.android.com/apk/res/android"
 	xmlns:app = "http://schemas.android.com/apk/res-auto"
 	android:layout_width = "match_parent"
-	android:layout_height = "match_parent">
-	<ImageView android:id = "@+id/symbol"
+	android:layout_height = "match_parent"
+	>
+
+	<ImageView
+		android:id = "@+id/symbol"
 		android:layout_width = "190dp"
 		android:layout_height = "270dp"
 		app:layout_constraintTop_toTopOf = "parent"
@@ -14,9 +18,12 @@
 		android:layout_marginBottom = "16dp"
 		android:layout_marginStart = "16dp"
 		android:layout_marginEnd = "16dp"
-		android:contentDescription="TODO" app:srcCompat = "@drawable/ic_symbol"
-		app:layout_constraintVertical_bias = "0.30"/>
-	<TextView android:id = "@+id/the_best_work"
+		app:srcCompat = "@drawable/ic_symbol"
+		app:layout_constraintVertical_bias = "0.30"
+		/>
+
+	<TextView
+		android:id = "@+id/the_best_work"
 		android:layout_width = "wrap_content"
 		android:layout_height = "wrap_content"
 		app:layout_constraintTop_toTopOf = "parent"
@@ -26,11 +33,14 @@
 		android:layout_marginBottom = "16dp"
 		android:layout_marginStart = "32dp"
 		android:textStyle = "bold"
+		android:textColor = "@color/font_color"
 		android:textSize = "18sp"
 		android:text = "@string/splash_screen_text_1"
-		android:textColor = "@color/font_color"
-		app:layout_constraintVertical_bias = "0.75"/>
-	<TextView android:id = "@+id/the_best_specialists"
+		app:layout_constraintVertical_bias = "0.75"
+		/>
+
+	<TextView
+		android:id = "@+id/the_best_specialists"
 		android:layout_width = "wrap_content"
 		android:layout_height = "wrap_content"
 		app:layout_constraintTop_toTopOf = "parent"
@@ -40,8 +50,9 @@
 		android:layout_marginBottom = "16dp"
 		android:layout_marginEnd = "32dp"
 		android:textStyle = "bold"
+		android:textColor = "@color/font_color"
 		android:textSize = "18sp"
 		android:text = "@string/splash_screen_text_2"
-		android:textColor = "@color/font_color"
-		app:layout_constraintVertical_bias = "0.80"/>
+		app:layout_constraintVertical_bias = "0.80"
+		/>
 </androidx.constraintlayout.widget.ConstraintLayout>
