--- a/app/src/main/res/layout/reg_phase_recycler_item.xml
+++ b/app/src/main/res/layout/reg_phase_recycler_item.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-	xmlns:android = "http://schemas.android.com/apk/res/android"
-	xmlns:app = "http://schemas.android.com/apk/res-auto"
-	android:layout_width = "match_parent"
-	android:layout_height = "wrap_content"
-	android:orientation = "vertical"
+<layout>
+    <data>
+        <variable name="viewModel" type="ru.jobni.jobni.viewmodel.RegViewModel" />
+        <variable name="position" type="Integer" />
+        <import type="android.view.View"/>
+    </data>
+	<LinearLayout
+			xmlns:android="http://schemas.android.com/apk/res/android"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:orientation="vertical"
 	>
 
 	<TextView
@@ -13,13 +18,16 @@
 		android:layout_height = "wrap_content"
 		android:layout_margin = "16dp"
 		android:background = "@drawable/shape_button"
-		android:textColor = "@color/black"
+		android:textColor = "@{position == viewModel.numberOfVisibleItemReg ? @color/white : @color/black}"
 		android:textSize = "18sp"
+		android:text='@{position == 0 ? "1.Регистрационные данные" : (position == 1 ? "2.Основная информация" : (position == 2 ? "3.Контактные данные" : ""))}'
 		/>
 
 	<FrameLayout
 		android:id = "@+id/container_reg_rv_item"
 		android:layout_width = "match_parent"
 		android:layout_height = "wrap_content"
+		android:visibility="@{position == viewModel.numberOfVisibleItemReg ? View.VISIBLE : View.GONE}"
 		/>
 </LinearLayout>
+</layout>
