--- a/app/src/main/res/layout/c_social_network_auth.xml
+++ b/app/src/main/res/layout/c_social_network_auth.xml
@@ -176,6 +176,8 @@
 			android:layout_marginStart = "12dp"
 			app:srcCompat = "@drawable/ic_microsoft"
 			android:background = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("micro")) ? @drawable/shape_button : @drawable/shape_badge}'
+			android:clickable = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("")) ? true : safeUnbox(viewmodelauth.btnUserLogged.equals("micro")) ? true : false}'
+			android:onClick = '@{() -> viewmodelmain.setSocialLaunch(viewmodelauth.btnUserLogged.equals("micro") ? "AuthWinUserLogged" : "AuthWinUser")}'
 			/>
 	</androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
