--- a/app/src/main/res/layout/c_social_network_auth.xml
+++ b/app/src/main/res/layout/c_social_network_auth.xml
@@ -88,9 +88,9 @@
 			app:layout_constraintStart_toEndOf = "@+id/bnt_ok"
 			android:layout_marginStart = "12dp"
 			app:srcCompat = "@drawable/ic_instagram"
-			android:background = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("inst")) ? @drawable/shape_button : @drawable/shape_badge}'
-			android:clickable = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("")) ? true : safeUnbox(viewmodelauth.btnUserLogged.equals("inst")) ? true : false}'
-			android:onClick = '@{() -> viewmodelmain.setSocialLaunch(viewmodelauth.btnUserLogged.equals("inst") ? "AuthInstagramUserLogged" : "AuthInstagramUser")}'
+			android:background = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("instagram")) ? @drawable/shape_button : @drawable/shape_badge}'
+			android:clickable = '@{safeUnbox(viewmodelauth.btnUserLogged.equals("")) ? true : safeUnbox(viewmodelauth.btnUserLogged.equals("instagram")) ? true : false}'
+			android:onClick = '@{() -> viewmodelmain.setSocialLaunch(viewmodelauth.btnUserLogged.equals("instagram") ? "AuthInstagramUserLogged" : "AuthInstagramUser")}'
 			/>
 
 		<ImageButton
