--- a/app/src/main/res/layout/c_authorization_user_instagram.xml
+++ b/app/src/main/res/layout/c_authorization_user_instagram.xml
@@ -63,7 +63,7 @@
 			/>
 
 		<Button
-			android:id = "@+id/btn_instagram_login"
+			android:id = "@+id/btn_instagram_auth"
 			android:layout_width = "wrap_content"
 			android:layout_height = "wrap_content"
 			app:layout_constraintTop_toBottomOf = "@+id/include_social_network"
@@ -71,20 +71,7 @@
 			app:layout_constraintEnd_toEndOf = "@+id/iv_background"
 			android:layout_marginTop = "16dp"
 			android:background = "@drawable/shape_button"
-			android:text = "login"
-			/>
-
-		<Button
-			android:id = "@+id/btn_instagram_auth"
-			android:layout_width = "wrap_content"
-			android:layout_height = "wrap_content"
-			app:layout_constraintTop_toBottomOf = "@+id/include_social_network"
-			app:layout_constraintStart_toStartOf = "@+id/iv_background"
-			app:layout_constraintEnd_toEndOf = "@+id/iv_background"
-			android:layout_marginTop = "80dp"
-			android:background = "@drawable/shape_button"
-			android:text = "auth"
-			app:layout_constraintHorizontal_bias = "0.501"
+			android:text = "@string/nav_header_btn_auth_text"
 			/>
 	</androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
