--- a/app/src/main/res/layout/auth_dialog_social.xml
+++ b/app/src/main/res/layout/auth_dialog_social.xml
@@ -1,16 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
 	xmlns:android = "http://schemas.android.com/apk/res/android"
+	xmlns:app = "http://schemas.android.com/apk/res-auto"
 	android:id = "@+id/auth_dialog"
 	android:layout_width = "match_parent"
 	android:layout_height = "match_parent"
+	android:orientation = "vertical"
 	>
 
 	<WebView
 		android:id = "@+id/web_view_social"
 		android:layout_width = "match_parent"
 		android:layout_height = "500dp"
-		android:layout_gravity = "center_vertical"
+		app:layout_constraintTop_toTopOf = "parent"
+		app:layout_constraintBottom_toBottomOf = "parent"
+		app:layout_constraintHorizontal_bias = "0.5"
+		app:layout_constraintVertical_bias = "0.5"
 		/>
-</LinearLayout>
+
+	<ProgressBar
+		android:id = "@+id/search_progress_bar"
+		android:layout_width = "25dp"
+		android:layout_height = "25dp"
+		app:layout_constraintTop_toTopOf = "parent"
+		app:layout_constraintStart_toStartOf = "parent"
+		app:layout_constraintEnd_toEndOf = "parent"
+		android:layout_marginTop = "30dp"
+		android:layout_marginEnd = "8dp"
+		style = "?android:attr/progressBarStyleLarge"
+		android:layout_alignParentTop = "true"
+		android:layout_alignParentEnd = "true"
+		app:layout_constraintHorizontal_bias = "0.978"
+		/>
+</androidx.constraintlayout.widget.ConstraintLayout>
 
