--- a/app/src/main/res/layout/reg_dialog.xml
+++ b/app/src/main/res/layout/reg_dialog.xml
@@ -1,14 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
-	xmlns:android = "http://schemas.android.com/apk/res/android"
-	>
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app = "http://schemas.android.com/apk/res-auto"
+>
 
-	<WebView
-		android:id = "@+id/web_view_social_reg"
-		android:layout_width = "match_parent"
-		android:layout_height = "500dp"
-		android:layout_gravity = "center_vertical"
-		/>
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        <WebView
+                android:id="@+id/web_view_social_reg"
+                android:layout_width="match_parent"
+                android:layout_height="500dp"
+                android:layout_gravity="center_vertical"
+                app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"/>
+
+            <ProgressBar
+                    android:id = "@+id/reg_progress_bar"
+                    android:layout_width = "25dp"
+                    android:layout_height = "25dp"
+                    app:layout_constraintTop_toTopOf = "parent"
+                    app:layout_constraintStart_toStartOf = "parent"
+                    app:layout_constraintEnd_toEndOf = "parent"
+                    android:layout_marginTop = "30dp"
+                    android:layout_marginEnd = "8dp"
+                    style = "?android:attr/progressBarStyleLarge"
+                    android:layout_alignParentTop = "true"
+                    android:layout_alignParentEnd = "true"
+                    app:layout_constraintHorizontal_bias = "0.978"
+            />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
 
 
